# eristropy

./: .gitignore  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
api/sample_entropy/: index.html
api/stationarity/: index.html
benchmark/: gp_benchmark.py
benchmark/benchmark_results/: gp_benchmark_summary.md
cpyet/: _bootstrap.py  _difference.py  _gp.py  _linreg.py  sample_entropy.py  stationarity.py  utils.py
docs/: _config.yml  index.md
docs/api/: index.md  sample_entropy.md  stationarity.md
docs/api/stationarity/: determine_stationary_signals.md  index.md  make_stationary_signals.md
docs/math_explanations/: entropy.md  regression.md  stationarity.md
docs/usage/: sample_entropy_analysis.md
eristropy/: _bootstrap.py  _gp.py  bootstrap.py  dataclasses.py  difference.py  extras.py  gp.py  linreg.py  sample_entropy.py  stationarity.py  utils.py  validation.py
math_explanations/entropy/: index.html
math_explanations/regression/: index.html
math_explanations/stationarity/: index.html
search/: search_index.json
tests/: test_bootstrap.py  test_dataclasses.py  test_difference.py  test_gp.py  test_linreg.py  test_sample_entropy.py  test_stationarity.py  test_utils.py  test_validation.py
usage/sample_entropy_analysis/: index.html
