[tool.poetry]
name = "eristropy"
version = "0.1.0"
description = "EristroPy: End-to-end complexity analysis of time series signals"
authors = ["Zachary Blanks <zachblanks17@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.21,<1.25"
numba = "^0.57.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
statsmodels = "^0.14.0"
optuna = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
