[tool.poetry]
name = "eristropy"
version = "0.1.0"
description = "EristroPy: End-to-end entropy analysis of time series signals"
authors = ["Zachary Blanks <zdb6dz@virginia.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zblanks/eristropy"
homepage = "https://zblanks.github.io/eristropy"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = ["entropy", "time-series", "optimization"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24"
numba = "^0.57.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
statsmodels = "^0.14.0"
optuna = "^3.2.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
